# GNOME-War-Pad

./: AUTHORS  BUGS  CHANGES  ChangeLog  Doxyfile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  generate_py_mappings.sh  gwp.desktop.in  releaser.sh
contrib/: appendix.txt  filefmt.txt  ion-storms.html
contrib/check-0.9.0/: Makefile.in  aclocal.m4  configure
contrib/check-0.9.0/debian/: Makefile.in
contrib/check-0.9.0/doc/: Makefile.in  c14.html  c150.html  c217.html  c33.html  c57.html  index.html  x102.html  x159.html  x170.html  x201.html  x207.html  x214.html  x68.html  x77.html  x95.html
contrib/check-0.9.0/doc/money/: Makefile.in
contrib/check-0.9.0/rpm/: Makefile.in  check.spec
contrib/check-0.9.0/src/: Makefile.in  check.h
contrib/check-0.9.0/tests/: Makefile.in
contrib/gtksdl/: Makefile  README  gtksdl.c
contrib/scripts/: parsekore.pl  plcat.pl
debian/: Makefile.am  README.Debian  changelog  conffiles.ex  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  gwp-default.ex  gwp.doc-base.EX  gwp.manpages  gwp.sgml  gwp.substvars  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch  watch.ex
docs/: class-diagram.dia  plugins.txt
docs/tutorials/plugins/: example1.py  example1_00.py  gwp_plugins_tutorial_en.xml  gwp_plugins_tutorial_es.xml  project1.glade
gwp-python/: gwp.py
help/: Makefile.am
help/C/: Makefile.am  aboutgwp.xml  games_internet.xml  gwp-C.omf  gwp.xml  learnmore.xml  message-reader.xml  planet-ops.xml  plugins-console.xml  plugins-intro.xml  plugins-using.xml  ship-ops.xml  starbase-ops.xml  starchart-ops.xml  vpmechanics.xml  whatisvp.xml
package/: gwp-fedora.spec  gwp-mdk.spec  gwp.spec
pixmaps/: Makefile.am  gwp.xpm
pixmaps/planets/: Makefile.am
pixmaps/races/: Makefile.am
pixmaps/ships/: Makefile.am
pixmaps/vcr-textures/: Makefile.am
po/: ChangeLog  POTFILES.in  de.po  es.po  fr.po  gwp.pot  pt_BR.po
scripts/: Makefile.am  gtkcons.py  inittab.py  navigator.py
scripts/plugins/: Makefile.am  finder.py  gwp_config.py.in  magallanes.glade  magallanes.py  notification_area.py  quark.glade  quark.py  quark_utils.py  uhura.py  vp_utils.py
scripts/plugins/quark_files/: Makefile.am  quark_tips.txt
src/: Controllers.py  Makefile.am  Makefile.in  Models.py  Views.py  base.c  base.h  callbacks.c  callbacks.h  check-gwp-object.c  check-gwp-ui.c  check-gwp.c  game-manager.glade  game_mgr.c  game_mgr.h  game_state.c  game_state.h  game_types.h  global.h  gwp-beamspec.c  gwp-beamspec.h  gwp-engspec.c  gwp-engspec.h  gwp-flying-object.c  gwp-flying-object.h  gwp-game-state.c  gwp-game-state.h  gwp-hullspec.c  gwp-hullspec.h  gwp-ion-storm.c  gwp-ion-storm.h  gwp-location.c  gwp-location.h  gwp-marker.c  gwp-marker.h  gwp-messages.c  gwp-messages.h  gwp-minefield.c  gwp-minefield.h  gwp-object.c  (+85 more)
src-old/: callbacks.h  game_mgr.c  game_mgr.h  gwp-beamspec.h  gwp-flying-object.c  gwp-flying-object.h  gwp-marker.c  gwp-minefield.c  gwp-minefield.h  gwp-object.c  gwp-object.h  gwp-py-functions.h  gwp-py-mappings.c  gwp-py-mappings.defs  gwp-py-mappings.override  gwp-python.c  gwp-race.c  gwp-race.h  gwp-ship.c  gwp-ship.h  gwp-starbase.c  gwp-starbase.h  gwp-starchart.c  gwp-ui.c  gwp-ui.h  gwp-utils.c  gwp-vcrfile.h  gwp.gladep  gwp_types.c  gwp_types.h  main.c  message-reader.c  message-reader.h  mission.h  race.h  starchart.h  tables.c  vcr-combat.c  vcr-combat.h  vcr.c  (+6 more)
src-old/gwp-python/: pdata.py  racenm.py
src-old/gwp-python/FileReaders/: __init__.py  pdata.py
src/Collections/: __init__.py
src/FileReaders/: __init__.py  bdata.py  casefile.py  kore.py  pdata.py  planetnm.py  racenm.py  ship.py  shipxy.py  target.py  xyplan.py
src/collections/: __init__.py
src/filereaders/: __init__.py  bdata.py  beamspec.py  kore.py  pdata.py  racenm.py  ship.py  shipxy.py  target.py  truehull.py  xyplan.py
src/gwp/: Models.py  collections.py  models.py  plugins.py  ui.py  utils.py
src/gwp-python/: Models.py  modeltest.py
src/gwp-python/FileReaders/: racenm.py
src/gwp/collections/: __init__.py
src/gwp/filereaders/: __init__.py  bdata.py  beamspec.py  casefile.py  engspec.py  genx.py  hullspec.py  kore.py  pconfig.py  pdata.py  planetnm.py  racenm.py  ship.py  shipxy.py  target.py  torpspec.py  truehull.py  util.py  xyplan.py
src/gwp/widgets/: __init__.py  pycons.py  starchart.py
src/plugins/utopia_planitia/: models.py  ui.py  utopia_planitia.glade
src/tests/: modeltest.py
src/utils/: test_starchart.py
tests/: Makefile.am  check-gwp-object.c  check-gwp-ship.c  check-gwp-ui.c  check-gwp.c
