SUBDIRS = planets ships

EXTRA_DIST = \
		game_icon.png\
		gwp_splash.png\
		logo.png\
		gwp.png

gwpiconpixdir = $(datadir)/pixmaps/gwp/icons
gwpiconpix_DATA = game_icon.png

gwpimagesdir = $(datadir)/pixmaps/gwp/images
gwpimages_DATA = gwp_splash.png

distpixmapdir = $(datadir)/pixmaps
distpixmap_DATA = gwp.png

gwpdistdir = $(datadir)/gwp
gwpdist_DATA = logo.png gwp.png

