SUBDIRS = planets ships races vcr-textures

EXTRA_DIST = \
		gwp_splash.png	\
		logo.png	\
		gwp.png		\
		gwp.xpm

gwpimagesdir = $(datadir)/pixmaps/gwp/images
gwpimages_DATA = gwp_splash.png

distpixmapdir = $(datadir)/pixmaps
distpixmap_DATA = gwp.png gwp.xpm

gwpdistdir = $(datadir)/gwp
gwpdist_DATA = logo.png gwp.png

