figdir = figures
docname = gwp
lang = C
omffile = gwp-C.omf
entities = legal.xml 			\
	   fdl-appendix.xml 		\
	   aboutgwp.xml 		\
	   whatisvp.xml 		\
	   vpmechanics.xml 		\
	   games_internet.xml 		\
	   learnmore.xml		\
	   starchart-ops.xml		\
	   planet-ops.xml		\
	   starbase-ops.xml		\
	   ship-ops.xml			\
	   plugins-intro.xml		\
	   plugins-using.xml		\
	   plugins-console.xml
include $(top_srcdir)/help/xmldocs.make
dist-hook: app-dist-hook
