#SUBDIRS =

EXTRA_DIST = \
	sbase1.png \
	planet-unknown.png \
	planet0-9.png \
	planet10-19.png \
	planet20-29.png \
	planet30-39.png \
	planet40-49.png \
	planet50-59.png \
	planet60-69.png \
	planet70-79.png \
	planet80-89.png \
	planet90-100.png

gwpplanetspixdir = $(datadir)/pixmaps/gwp/planets
gwpplanetspix_DATA = $(EXTRA_DIST)

