#SUBDIRS =

EXTRA_DIST = \
	race-logo1.png \
	race-logo2.png \
	race-logo3.png \
	race-logo4.png \
	race-logo5.png \
	race-logo6.png \
	race-logo7.png \
	race-logo8.png \
	race-logo9.png \
	race-logo10.png \
	race-logo11.png

gwpracespixdir = $(datadir)/pixmaps/gwp/races
gwpracespix_DATA = $(EXTRA_DIST)

