#SUBDIRS =

EXTRA_DIST = \
	ship1.jpg \
	ship10.jpg \
	ship100.jpg \
	ship101.jpg \
	ship102.jpg \
	ship103.jpg \
	ship104.jpg \
	ship105.jpg \
	ship11.jpg \
	ship12.jpg \
	ship13.jpg \
	ship14.jpg \
	ship15.jpg \
	ship16.jpg \
	ship17.jpg \
	ship18.jpg \
	ship19.jpg \
	ship2.jpg \
	ship20.jpg \
	ship21.jpg \
	ship22.jpg \
	ship23.jpg \
	ship24.jpg \
	ship25.jpg \
	ship26.jpg \
	ship27.jpg \
	ship28.jpg \
	ship29.jpg \
	ship3.jpg \
	ship30.jpg \
	ship31.jpg \
	ship32.jpg \
	ship33.jpg \
	ship34.jpg \
	ship35.jpg \
	ship36.jpg \
	ship37.jpg \
	ship38.jpg \
	ship39.jpg \
	ship4.jpg \
	ship40.jpg \
	ship41.jpg \
	ship42.jpg \
	ship43.jpg \
	ship44.jpg \
	ship45.jpg \
	ship46.jpg \
	ship47.jpg \
	ship48.jpg \
	ship49.jpg \
	ship5.jpg \
	ship50.jpg \
	ship51.jpg \
	ship52.jpg \
	ship53.jpg \
	ship54.jpg \
	ship55.jpg \
	ship56.jpg \
	ship57.jpg \
	ship58.jpg \
	ship59.jpg \
	ship6.jpg \
	ship60.jpg \
	ship61.jpg \
	ship62.jpg \
	ship63.jpg \
	ship64.jpg \
	ship65.jpg \
	ship66.jpg \
	ship67.jpg \
	ship68.jpg \
	ship69.jpg \
	ship7.jpg \
	ship70.jpg \
	ship71.jpg \
	ship72.jpg \
	ship73.jpg \
	ship74.jpg \
	ship75.jpg \
	ship76.jpg \
	ship77.jpg \
	ship78.jpg \
	ship79.jpg \
	ship8.jpg \
	ship80.jpg \
	ship81.jpg \
	ship82.jpg \
	ship83.jpg \
	ship84.jpg \
	ship85.jpg \
	ship86.jpg \
	ship87.jpg \
	ship88.jpg \
	ship89.jpg \
	ship9.jpg \
	ship90.jpg \
	ship91.jpg \
	ship92.jpg \
	ship93.jpg \
	ship94.jpg \
	ship95.jpg \
	ship96.jpg \
	ship97.jpg \
	ship98.jpg \
	ship99.jpg

gwpshipspixdir = $(datadir)/pixmaps/gwp/ships
gwpshipspix_DATA = $(EXTRA_DIST)

