#SUBDIRS =

EXTRA_DIST = \
	vpl100.jpg \
	vpl101.jpg \
	vpl102.jpg \
	vpl103.jpg \
	vpl104.jpg \
	vpl105.jpg \
	vpl106.jpg \
	vpl107.jpg \
	vpl108.jpg \
	vpl109.jpg \
	vpl10.jpg \
	vpl110.jpg \
	vpl112.jpg \
	vpl113.jpg \
	vpl114.jpg \
	vpl117.jpg \
	vpl118.jpg \
	vpl119.jpg \
	vpl11.jpg \
	vpl120.jpg \
	vpl121.jpg \
	vpl122.jpg \
	vpl123.jpg \
	vpl124.jpg \
	vpl128.jpg \
	vpl129.jpg \
	vpl12.jpg \
	vpl131.jpg \
	vpl132.jpg \
	vpl133.jpg \
	vpl134.jpg \
	vpl135.jpg \
	vpl136.jpg \
	vpl137.jpg \
	vpl13.jpg \
	vpl140.jpg \
	vpl141.jpg \
	vpl142.jpg \
	vpl143.jpg \
	vpl144.jpg \
	vpl146.jpg \
	vpl147.jpg \
	vpl148.jpg \
	vpl149.jpg \
	vpl14.jpg \
	vpl152.jpg \
	vpl153.jpg \
	vpl15.jpg \
	vpl16.jpg \
	vpl17.jpg \
	vpl18.jpg \
	vpl19.jpg \
	vpl20.jpg \
	vpl29.jpg \
	vpl30.jpg \
	vpl31.jpg \
	vpl32.jpg \
	vpl33.jpg \
	vpl45.jpg \
	vpl46.jpg \
	vpl47.jpg \
	vpl49.jpg \
	vpl50.jpg \
	vpl54.jpg \
	vpl55.jpg \
	vpl56.jpg \
	vpl57.jpg \
	vpl58.jpg \
	vpl59.jpg \
	vpl5.jpg \
	vpl60.jpg \
	vpl61.jpg \
	vpl62.jpg \
	vpl63.jpg \
	vpl64.jpg \
	vpl65.jpg \
	vpl66.jpg \
	vpl67.jpg \
	vpl68.jpg \
	vpl69.jpg \
	vpl6.jpg \
	vpl72.jpg \
	vpl73.jpg \
	vpl74.jpg \
	vpl76.jpg \
	vpl77.jpg \
	vpl78.jpg \
	vpl79.jpg \
	vpl7.jpg \
	vpl84.jpg \
	vpl85.jpg \
	vpl86.jpg \
	vpl87.jpg \
	vpl88.jpg \
	vpl89.jpg \
	vpl90.jpg \
	vpl97.jpg \
	vpl98.jpg \
	vpl99.jpg \
	vpl9.jpg

gwpshipspixdir = $(datadir)/pixmaps/gwp/ships
gwpshipspix_DATA = $(EXTRA_DIST)

