SUBDIRS = quark_files

EXTRA_DIST = \
	     finder.py				\
	     quark.py				\
	     quark.glade			\
	     quark_utils.py			\
	     magallanes.py			\
	     vp_utils.py			\
	     gwp_config.py			\
	     magallanes.glade			\
	     uhura.py				\
             notification_area.py

pluginsdir = $(datadir)/gwp/scripts/plugins
plugins_DATA = $(EXTRA_DIST)

